# rustwright

./: AGENTS.md  CHANGELOG.md  CODE_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  install.sh  pyproject.toml
.github/: sync.yml
benchmarks/: process_tree_memory.py  run_benchmarks.py
bindings/: CONTRACT.md
cli/: Cargo.toml  README.md
cli/src/: daemon.rs  lib.rs  main.rs  session.rs
cli/tests/: browser_e2e.rs  daemon_e2e.rs
csharp/: README.md
docs/: PARITY.md  RELEASING.md  agent-interfaces.md  async-design.md
examples/: fill_form.py  quickstart.js  scrape_table.py  screenshot_element.py
go/: .gitignore  README.md  evaluate.go  evaluate_test.go  ffi.go  go.mod  rustwright.go  rustwright_test.go
java/: README.md  run.sh
mcp/: AGENT_SETUP.md  README.md
mcp-rs/: Cargo.toml  README.md
mcp-rs/npm/: .gitignore  targets.json
mcp-rs/npm/main/: README.md  package.json  platforms.json
mcp-rs/npm/scripts/: build-npm.mjs  prove-local.mjs
mcp-rs/src/: actor.rs  main.rs  server.rs  snapshot.js  tools.rs  transport.rs
mcp-rs/tests/: stdio_e2e.rs  validation_p1b_remote.rs
node/: Cargo.toml  index.cjs  native.d.ts  package-lock.json  package.json
node/test/: decode.test.mjs  package.json  quickstart.test.mjs
php/: README.md  bootstrap.php  composer.json  runner.php  smoke.php
ruby/: README.md  runner.rb  rustwright.gemspec  smoke.rb
rust-native/: Cargo.toml
src/: lib.rs
tests/: test_adversarial_review.py  test_agent_cdp_integration.py  test_agent_cli_integration.py  test_agent_state.py  test_benchmark_memory.py  test_changelog.py  test_cli_mcp_integration.py  test_cli_mcp_verb.py  test_examples.py  test_rustwright_sync_api.py  test_validation_mcp_verb.py
tools/: adversarial_review.py  gen_binding_cases.py  generate_parity_map.py  install_hooks.py  run_benchmark_matrix.py
(+98 files in other folders)
