[package]
name = "rustwright-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Agent-focused, persistent browser automation CLI powered by Rustwright"
license = "MIT"
repository = "https://github.com/Skyvern-AI/rustwright"
publish = false

[[bin]]
name = "rustwright-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
rustwright_core = { package = "rustwright-core", path = "..", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[workspace]
resolver = "2"
