[package]
name = "rustwright-node"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.11.0", features = ["tokio_rt"] }
napi-derive = "=3.6.0"
rustwright_core = { package = "rustwright-core", path = "..", default-features = false }
serde = { version = "=1.0.194", features = ["derive"] }
serde_json = "=1.0.127"
tokio = { version = "=1.52.3", features = ["rt-multi-thread"] }
unicode-segmentation = "=1.10.1"

[build-dependencies]
napi-build = "=2.3.2"
